# night-watcher

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: BUILD.md  ROADMAP.md  RUN_REPORTS.md
grafana/provisioning/datasources/: prometheus.yml
loki/: config.yaml
nginx/: nginx.conf
promtail/: config.yaml
scripts/: analyze_health.py  tailscale-start.sh
src/: camera.py  detector.py  exporter.py  health.py  log_store.py  recorder.py  service.py  telemetry.py  tracker.py  utils.py
tests/: test_camera.py  test_detector.py  test_exporter.py  test_health.py  test_log_store.py  test_recorder.py  test_service.py  test_telemetry.py  test_tracker.py  test_utils.py
