[project]
name = "night-watcher"
version = "0.2.0"
description = "Raspberry Pi wildlife camera with YOLO detection and Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Pi-side service dependencies
    "opencv-python-headless",
    "ultralytics",
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "streamlit>=1.55.0",
    # System health monitoring
    "psutil>=5.9.0",
    # Docker service monitoring (requires /var/run/docker.sock mount)
    "docker>=7.0.0",
    # OpenTelemetry — metrics and distributed traces
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[dependency-groups]
client = [
    # Additional dependencies for the local Streamlit client
    "streamlit",
    "requests",
]
