[project]
name = "night-watcher"
version = "1.3.0"
description = "Raspberry Pi wildlife camera with YOLO detection, Prometheus metrics, and a Streamlit dashboard running on the Pi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Pi-side detection service
    "opencv-python-headless",
    "ultralytics",
    "fastapi",
    "uvicorn[standard]",
    # Streamlit dashboard (runs as a Docker service on the Pi)
    "streamlit>=1.55.0",
    "pandas",
    "requests>=2.31.0",
    # System health monitoring
    "psutil>=5.9.0",
    # Standalone Prometheus metrics exporter
    "prometheus-client>=0.20.0",
    # Docker service monitoring (requires /var/run/docker.sock mount)
    "docker>=7.0.0",
    # OpenTelemetry — metrics and distributed traces
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
